<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="40dp"
        android:text="@string/rang"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/rang15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/textView15"
        android:textSize="20dp"
        android:text="@string/rang16" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:textSize="20dp"
        android:text="@string/rang17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_alignLeft="@+id/textView17"
        android:textSize="20dp"
        android:text="@string/rang18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_alignLeft="@+id/textView18"
        android:textSize="20dp"
        android:text="@string/rang19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_alignLeft="@+id/textView19"
        android:textSize="20dp"
        android:text="@string/rang20" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_alignLeft="@+id/textView20"
        android:textSize="20dp"
        android:text="@string/rang21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_alignLeft="@+id/textView21"
        android:textSize="20dp"
        android:text="@string/rang22" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_alignLeft="@+id/textView22"
        android:textSize="20dp"
        android:text="@string/rang23" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_above="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/rang15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus15"
        android:layout_toEndOf="@+id/minus15"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus15"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus16"
        android:layout_toEndOf="@+id/minus16"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus16"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus17"
        android:layout_toEndOf="@+id/minus17"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus17"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus18"
        android:layout_toEndOf="@+id/minus18"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus18"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus19"
        android:layout_toEndOf="@+id/minus19"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus19"
        android:textSize="20dp"
        android:text="0" />


    <TextView
        android:id="@+id/rang20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus20"
        android:layout_toEndOf="@+id/minus20"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus20"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus21"
        android:layout_toEndOf="@+id/minus21"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus21"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus22"
        android:layout_toEndOf="@+id/minus22"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus22"
        android:textSize="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/rang23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minus23"
        android:layout_toEndOf="@+id/minus23"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/minus23"
        android:textSize="20dp"
        android:text="0" />

    <Button
        android:id="@+id/minus15"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView15"
        android:layout_toEndOf="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus15"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang15"
        android:layout_toEndOf="@+id/rang15"
        android:layout_alignBottom="@+id/rang15"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus16"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView16"
        android:layout_toEndOf="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus16"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang16"
        android:layout_toEndOf="@+id/rang16"
        android:layout_alignBottom="@+id/rang16"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView17"
        android:layout_toEndOf="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang17"
        android:layout_toEndOf="@+id/rang17"
        android:layout_alignBottom="@+id/rang17"
        android:text="+"
        android:textSize="10dp" />

    <Button
        android:id="@+id/minus18"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus18"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang18"
        android:layout_toEndOf="@+id/rang18"
        android:layout_alignBottom="@+id/rang18"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus19"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView19"
        android:layout_toEndOf="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus19"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang19"
        android:layout_toEndOf="@+id/rang19"
        android:layout_alignBottom="@+id/rang19"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus20"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView20"
        android:layout_toEndOf="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus20"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang20"
        android:layout_toEndOf="@+id/rang20"
        android:layout_alignBottom="@+id/rang20"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus21"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus21"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang21"
        android:layout_toEndOf="@+id/rang21"
        android:layout_alignBottom="@+id/rang21"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus22"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView22"
        android:layout_toEndOf="@+id/textView22"
        android:layout_alignBottom="@+id/textView22"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus22"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang22"
        android:layout_toEndOf="@+id/rang22"
        android:layout_alignBottom="@+id/rang22"
        android:text="+"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/minus23"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23"
        android:layout_alignBottom="@+id/textView23"
        android:text="-"
        android:textSize="10dp"/>

    <Button
        android:id="@+id/plus23"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/rang23"
        android:layout_toEndOf="@+id/rang23"
        android:layout_alignBottom="@+id/rang23"
        android:text="+"
        android:textSize="10dp"/>

</RelativeLayout>
